@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
 if [[ -r ./.gitconfig ]]; then
-  ln -s $(readlink -f ./.gitconfig) $HOME/.gitconfig
+  cp -f $(readlink -f ./.gitconfig) $HOME/.gitconfig
 fi
 
