@@ -1,0 +1,2 @@
+`/etc/hosts`，纯自用。
+
