@@ -1,0 +1,5 @@
+#!/usr/bin/env bash
+
+echo -ne "配置hosts...\t"
+echo '跳过'
+
